--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -36,6 +36,10 @@ jobs:
     environment: Test
     steps:
       - run: echo "🧪 Testing..."
+      - name: Use secrets and environment variables
+        run: |
+          echo "MY_VAR is: $TEST_VAR"
+          echo "MY_SECRET is: $TEST_SECRET"
 
   Load-Test:
     runs-on: ubuntu-latest
@@ -58,11 +62,6 @@ jobs:
       - run: |
           echo "🚀 Step 1..."
           sleep 10
-     
-      - name: Use secrets and environment variables
-        run: |
-          echo "MY_VAR is: $MY_ENV"         
-          echo "MY_SECRET is: $MY_SECRET"
 
       - run: |
           echo "🚀 Step 2..."
