--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -41,8 +41,8 @@ jobs:
           MY_SECRET: ${{ secrets.TEST_SECRET }} # Explicitly passing the secret
           MY_VAR: ${{ vars.TEST_VAR }}         # Explicitly passing the variable
         run: |
-          echo "MY_VAR is: $TEST_VAR"
-          echo "MY_SECRET is: $TEST_SECRET"
+          echo "MY_VAR is: $MY_VAR"
+          echo "MY_SECRET is: $MY_SECRET"
 
           
   Load-Test:
