--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,7 +14,9 @@ on:
         description: 'Environment to deploy to'
         type: environment
         required: true
-
+env:
+  MY_WORKFLOW_VAR: 'Worlflow variavel' 
+  
 jobs:
   Build:
     runs-on: ubuntu-latest
@@ -48,6 +50,7 @@ jobs:
           echo "MY_SECRET is: $MY_SECRET"
           echo "MY_REPO_SECRET is: $REPO_SECRET"
           echo "MY_REPO_VAR is: $REPO_VAR"
+          Echo "MY WORKFLOW VAR is: $MY_WORKFLOW_VAR
 
           
   Load-Test:
